# dogImageStab

./: .gitignore  CMakeLists.txt  Exceptions.h  Parameters.cpp  Parameters.h  Stabilizer.h  StabilizerGCBPM.cpp  StabilizerGCBPM.h  StabilizerSVD.cpp  StabilizerSVD.h  brno.cpp  computeMeasures.cpp  frameWiseEntropy.cpp  opencvHistComparer.h  showTwoTogether.cpp  similarityClusterer.cpp  similarityTEST.cpp  similarityTEST.h  simpleExample.cpp  simpleFarneback.cpp  twoImageMeasures.cpp  videoStabilizationQualityMeasures.cpp  videoStabilizationQualityMeasures.h  videostabExample.cpp  xgetopt.h
FFTTStabilization/: logPolarStabilizer.cpp
featureBasedStabilizer/: featureBasedStabilizer.cpp  featureStabilizer.cpp  featureStabilizer.h
featureComparer/: featureComparer.cpp  featureComparer.h
ioUtility/: ioSegmentVideoByTagFile.cpp  ioUtility.cpp
itkBasedStabilization/: itkStabilizer.cpp  itkStabilizer.h
scripts/: run_all_metrics.sh  run_ioUtility_all_videos.sh
siftTEST/: featureComparer.cpp  matchCalculator.cpp  matchCalculator.h  siftTEST.cpp
similarityClusterer/: ClusterInfo.cpp  ClusterInfoContainer.cpp  FrameInfo.cpp  classifier.cpp  classifier.h  clusterer.cpp  clusterer.h  defaults.h  defaults.h.default  featureComparer.cpp  featureComparer.h  framewiseSimilarityMetric.h  opencvHistComparer.cpp  opencvHistComparer.h  opencvITKmetric.cpp  opencvITKmetric.h  opencvImageMetric.cpp  opencvImageMetric.h  qualityMeasurer.cpp  qualityMeasurer.h  similarityClusterer.cpp  similarityFileUtils.cpp  tagFileUtils.cpp  utils.cpp
similarityClusterer/storageClasses/: ClusterInfo.cpp  ClusterInfoContainer.cpp  FrameInfo.cpp  QualityScore.cpp
testVideoGenerator/: testVideoGenerator.cpp  testVideoGenerator.h
